tests/NormalTests/paczka1/small_fuzzy/18687897.err
Error in line 1: S866 A317 2,4
Error in line 2: ivxZ0mFc A317 23,0
Error in line 3: ZTXj9DmKP S385 45,1
Error in line 5: ivxZ0mFc S866 50,7
Error in line 11: ivxZ0mFc S385 21,7
Error in line 8: mCSMQJ A317 1,6
